feat(phone): implement society contact application
Former-commit-id: 36f9da046f2b1397ce18c3de3ae98ea7e3028665

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -152,6 +152,10 @@
       "ME": "Moi"
     },
     "SOCIETY_CONTACTS": {
+      "FEEDBACK": {
+        "SEND_FAILED": "Erreur d'envoi du message !",
+        "SEND_SUCCESS": "Message envoyé avec succès !"
+      },
       "PLACEHOLDER_SEARCH_CONTACTS": "Rechercher...",
       "FORM_MESSAGE": "Message",
       "SEND": "Envoyer",
