feat(phone): create bank app
Former-commit-id: 2e4e18c180cc084f7680c474048389a108798961

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -103,6 +103,10 @@
         "UPDATE_SUCCESS": "Note mise à jour avec succès."
       }
     },
+    "BANK": {
+      "HOME_TITLE": "Compte en banque",
+      "CHECKING": "Total :"
+    },
     "MARKETPLACE": {
       "FEEDBACK": {
         "REQUIRED_FIELDS": "Tous les champs requis doivent être renseignés!",
