feat(phone): allow player to send positions
Former-commit-id: 1009147aa9e9316cb749ba517dfd46e52a1bedaa

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -134,7 +134,7 @@
       },
       "FEEDBACK": {
         "MESSAGE_CONVERSATION_CREATE_ONE_NUMBER_FAILED": "{{ number }} n'est pas un numéro attribués",
-        "NEW_MESSAGE_FAILED:": "Erreur d'envoi",
+        "NEW_MESSAGE_FAILED": "Erreur d'envoi",
         "INVALID_PHONE_NUMBER": "Numéro de téléphone invalide",
         "MESSAGE_CONVERSATION_DUPLICATE": "Cette conversation existe déjà!",
         "MESSAGE_GROUP_CREATE_FAILED": "Erreur lors de la création du groupe",
@@ -149,7 +149,9 @@
       "NEW_MESSAGE": "Message...",
       "NEW_MESSAGE_GROUP": "Numéros de téléphone...",
       "GROUP_CHAT_LABEL": "Nom du groupe...",
-      "MEDIA_OPTION": "Caméra / Galerie",
+      "MEDIA_OPTION": "Envoyer une image",
+      "POSITION_OPTION": "Envoyer votre position",
+      "DESTINATION_OPTION": "Envoyer votre destination",
       "NEW_MESSAGE_GROUP_SUBMIT": "Envoyer",
       "INPUT_NAME_OR_NUMBER": "Rechercher des contacts ou tapez un numéro et appuyez sur Entrée",
       "ACTIONS_TITLE": "Actions",
