feat(phone): setup profile picture in phone
Former-commit-id: e959c044c2d444e6881945c62d67834d284fc6ad

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -26,6 +26,7 @@
       "CATEGORY": {
         "APPEARANCE": "Apparence",
         "PHONE": "Téléphone",
+        "PROFILE": "Profil",
         "ACTIONS": "Actions"
       },
       "OPTIONS": {
