feat(phone): rework icon
Former-commit-id: 8f5f3c54bac2c3e99568c0f8eda7e961373503b0

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -30,17 +30,15 @@
         "ACTIONS": "Actions"
       },
       "OPTIONS": {
-        "ICONSET": "Pack d'icônes",
         "THEME": "Thème",
         "LANGUAGE": "Langage",
         "FRAME": "Coque",
         "ZOOM": "Zoom",
         "WALLPAPER": "Fond d'écran",
-        "RESET_SETTINGS": "Réinitialiser les paramètres",
-        "RESET_SETTINGS_DESC": "Cette action effacera toutes vos données",
+        "RESET_SETTINGS": "Réinitialiser toutes vos données",
         "STREAMER_MODE": {
-          "TITLE": "Mode streamer",
-          "DESCRIPTION": "Masque les images avant qu'elles soient montrées"
+          "TITLE": "Mode NSFW",
+          "DESCRIPTION": "Masque les images par défaut"
         },
         "CUSTOM_WALLPAPER": {
           "DIALOG_TITLE": "Fond d'écran personnalisé",
