feat(phone): rework bank app
Former-commit-id: 72af02246c6fa5e4a138e9f5cd77d0e009f4da79

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -211,7 +211,7 @@
     "APPS_CONTACTS": "Contacts",
     "APPS_MESSAGES": "Messages",
     "APPS_SETTINGS": "Paramètres",
-    "APPS_BANK": "WhoDis Banking",
+    "APPS_BANK": "Maze Banque",
     "APPS_NOTES": "Notes",
     "APPS_EXAMPLE": "Example app",
     "APPS_MARKETPLACE": "Marketplace",
