feat(phone): update snack notification
Former-commit-id: e63f284911d76f63c9622b2581299da0a13cdfc5

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -38,7 +38,7 @@
         "RESET_SETTINGS": "Réinitialiser toutes vos données",
         "STREAMER_MODE": {
           "TITLE": "Mode NSFW",
-          "DESCRIPTION": "Masque les images par défaut"
+          "DESCRIPTION": "Masquer les images par défaut"
         },
         "CUSTOM_WALLPAPER": {
           "DIALOG_TITLE": "Fond d'écran personnalisé",
