feat(phone): update contacts apps
Former-commit-id: 9336fceadfdb5354716941a4651312da420a9d2c

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -163,7 +163,7 @@
       },
       "PLACEHOLDER_SEARCH_CONTACTS": "Rechercher...",
       "FORM_MESSAGE": "Message",
-      "SEND": "Envoyer",
+      "SEND": "Envoyer le message",
       "SEND_POSITION": "Envoyer + Position",
       "SET_ANONYMOUS": "Être anonyme"
     },
