feat(phone): add twitch-news app
Former-commit-id: 7e052b914a624deea4c4e4734217a4552cd28ad5

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -225,6 +225,7 @@
     "APPS_PHOTO": "Galerie",
     "APPS_SOCIETY_CONTACTS": "Annuaire Entreprise",
     "APPS_SOCIETY_MESSAGES": "Répondeur Entreprise",
+    "APPS_TWITCH_NEWS": "Twitch News",
     "GENERIC_CLICK_TO_REVEAL": "Cliquer pour révéler",
     "GENERIC_LOADING": "Chargement...",
     "GENERIC_WAIT": "Veuillez patienter...",
