feat(phone): rename bank app
Former-commit-id: 7ee1917936dcc7274f690ea78daa7befee37a7a7

--- a/lib/npwd/phone/src/locale/fr.json
+++ b/lib/npwd/phone/src/locale/fr.json
@@ -215,7 +215,7 @@
     "APPS_CONTACTS": "Contacts",
     "APPS_MESSAGES": "Messages",
     "APPS_SETTINGS": "Paramètres",
-    "APPS_BANK": "Maze Banque",
+    "APPS_BANK": "Fleeca Banque",
     "APPS_NOTES": "Notes",
     "APPS_EXAMPLE": "Example app",
     "APPS_MARKETPLACE": "Marketplace",
